@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.oak.plugins.tree.RootProvider;
 import org.apache.jackrabbit.oak.plugins.tree.TreeProvider;
@@ -251,7 +250,7 @@ public class CompositeConfigurationTest extends AbstractCompositeConfigurationTe
             @NotNull
             @Override
             public List<ProtectedItemImporter> getProtectedItemImporters() {
-                return ImmutableList.of(mock(ProtectedItemImporter.class));
+                return List.of(mock(ProtectedItemImporter.class));
             }
         };
         addConfiguration(withImporter);
@@ -270,7 +269,7 @@ public class CompositeConfigurationTest extends AbstractCompositeConfigurationTe
             @NotNull
             @Override
             public List<ThreeWayConflictHandler> getConflictHandlers() {
-                return ImmutableList.of(mock(ThreeWayConflictHandler.class));
+                return List.of(mock(ThreeWayConflictHandler.class));
             }
         };
         addConfiguration(withConflictHandler);
@@ -289,7 +288,7 @@ public class CompositeConfigurationTest extends AbstractCompositeConfigurationTe
             @NotNull
             @Override
             public List<? extends CommitHook> getCommitHooks(@NotNull String workspaceName) {
-                return ImmutableList.of(mock(CommitHook.class));
+                return List.of(mock(CommitHook.class));
             }
         };
         addConfiguration(withCommitHook);
@@ -308,7 +307,7 @@ public class CompositeConfigurationTest extends AbstractCompositeConfigurationTe
             @NotNull
             @Override
             public List<? extends ValidatorProvider> getValidators(@NotNull String workspaceName, @NotNull Set<Principal> principals, @NotNull MoveTracker moveTracker) {
-                return ImmutableList.of(mock(ValidatorProvider.class));
+                return List.of(mock(ValidatorProvider.class));
             }
         };
         addConfiguration(withValidator);
@@ -402,7 +401,7 @@ public class CompositeConfigurationTest extends AbstractCompositeConfigurationTe
             @NotNull
             @Override
             public Iterable<Monitor<?>> getMonitors(@NotNull StatisticsProvider statisticsProvider) {
-                return ImmutableList.of(monitor);
+                return List.of(monitor);
             }
         };
         addConfiguration(withMonitors);
