@@ -46,7 +46,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Random;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.oak.api.Blob;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.plugins.memory.ArrayBasedBlob;
@@ -229,7 +228,7 @@ public class SegmentParserTest {
         builder.setChildNode("n");
         builder.setProperty("p", 1);
         builder.setProperty("jcr:primaryType", "type", NAME);
-        builder.setProperty("jcr:mixinTypes", ImmutableList.of("type1", "type2"), NAMES);
+        builder.setProperty("jcr:mixinTypes", List.of("type1", "type2"), NAMES);
         SegmentNodeState node = new SegmentNodeState(store.getReader(), writer, store.getBlobStore(), writer.writeNode(builder.getNodeState()));
         NodeInfo nodeInfo = new TestParser(store.getReader(), "template") {
             @Override
@@ -320,7 +319,7 @@ public class SegmentParserTest {
     @Test
     public void multiValueProperty() throws IOException {
         NodeBuilder builder = EMPTY_NODE.builder();
-        builder.setProperty("p", ImmutableList.of(1L, 2L, 3L, 4L), LONGS);
+        builder.setProperty("p", List.of(1L, 2L, 3L, 4L), LONGS);
         SegmentNodeState node = new SegmentNodeState(store.getReader(), writer, store.getBlobStore(), writer.writeNode(builder.getNodeState()));
         NodeInfo nodeInfo = new TestParser(store.getReader(), "multiValueProperty") {
             @Override
